[package]
name = "hiramu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.26", features = ["json"] } # Update the version if necessary
serde_json = "1.0"